# KanriGate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
helm/kanrigate/: Chart.yaml  values.yaml
helm/kanrigate/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  template-cluster-roles.yaml
src/: config.rs  main.rs  state.rs
src/api/: auth.rs  handlers.rs  mod.rs  routes.rs
src/models/: requests.rs  response.rs
src/services/: kubernetes.rs
src/ui/: README.md  build-fix.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
src/ui/src/: app.css  app.html  hooks.server.ts
src/ui/src/lib/: api.ts  nav.svelte.ts  toast.svelte.ts
src/ui/src/lib/components/: Dashboard.svelte  KubeConfigView.svelte  MetricCard.svelte  QuickAction.svelte  Sidebar.svelte  Toast.svelte  UserCard.svelte  UserForm.svelte  UserList.svelte
src/ui/src/routes/: +layout.svelte  +page.svelte  layout.css
src/ui/src/routes/apps/[...path]/: +server.ts
src/ui/src/routes/login/: +page.server.ts  +page.svelte
src/ui/src/routes/logout/: +page.server.ts
