[package]
name = "kanrigate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_26"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.13"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
dotenvy = "0.15"
lazy_static = "1.4"
regex = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
base64 = "0.21"
